---------------------------------------------------------------------------------------------------
Version: 5.3.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 5.3.4
Date: 2020-11-29
  Changes:
    - Fixed error when trying to export a preset with no items set
---------------------------------------------------------------------------------------------------
Version: 5.3.3
Date: 2020-11-28
  Changes:
    - Changed the shortcut icon to red and yellow arrows
    - Added a hotkey to toggle trashing unrequested items
    - Added a checkbox to turn off trashing unrequested items once the inventory is cleaned up
  Bugfixes:
    - Fixed error when saving a preset via the spidertron gui
---------------------------------------------------------------------------------------------------
Version: 5.3.2
Date: 2020-11-26
  Features:
    - Added the ability to load presets into the spidertron:
      - Presets are the same as the players presets
      - You can save the spidertrons current logistic requests as a preset
      - Holding shift when clicking on a preset adds it to the current requests. This allows combining multiple presets
---------------------------------------------------------------------------------------------------
Version: 5.3.1
Date: 2020-11-24
  Changes:
    - Removed the (+/-) buttons, a new row will be added if something is put in the last row
  Bugfixes:
    - Fixed error when adding AutoTrash to an existing save
---------------------------------------------------------------------------------------------------
Version: 5.3.0
Date: 2020-11-23
  Changes:
    - Updated for Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 5.2.16
Date: 2020-11-21
  Changes:
    - Added shortcut to toggle the AutoTrash gui
    - Added mod setting to hide the button in the top left